--- a/index.html
+++ b/index.html
@@ -1,196 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FA-Tshirt</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background-image: url('https://wallpaperaccess.com/full/5651980.jpg'); /* 3D style wallpaper */
-            background-size: cover;
-            background-attachment: fixed;
-            background-position: center;
-            color: white;
-        }
-
-        header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 10px 20px;
-            background-color: rgba(0, 0, 0, 0.7);
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-        }
-
-        .logo {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            font-weight: bold;
-        }
-
-        .logo img {
-            width: 50px;
-            height: 50px;
-        }
-
-        .search-bar {
-            flex: 1;
-            margin: 0 20px;
-        }
-
-        .search-bar input {
-            width: 100%;
-            padding: 10px;
-            border: none;
-            border-radius: 5px;
-        }
-
-        .nav-icons {
-            display: flex;
-            gap: 10px;
-        }
-
-        .nav-icons button {
-            background-color: #e50914;
-            color: white;
-            border: none;
-            padding: 10px;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        .category-bar {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            background-color: rgba(255, 255, 255, 0.1);
-            padding: 10px;
-        }
-
-        .category-bar div {
-            cursor: pointer;
-            padding: 5px 10px;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-        }
-
-        .category-bar div:hover {
-            background-color: rgba(255, 255, 255, 0.2);
-        }
-
-        .popup {
-            display: none;
-            position: fixed;
-            top: 20%;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 90%;
-            max-width: 500px;
-            background-color: rgba(0, 0, 0, 0.8);
-            color: white;
-            padding: 20px;
-            border-radius: 10px;
-            z-index: 2000;
-        }
-
-        .popup h3 {
-            margin-top: 0;
-            font-size: 18px;
-        }
-
-        .popup ul {
-            list-style: none;
-            padding: 0;
-            font-size: 14px;
-        }
-
-        .popup ul li {
-            padding: 5px 0;
-        }
-
-        .popup-close {
-            position: absolute;
-            top: 5px;
-            right: 10px;
-            background: none;
-            border: none;
-            color: white;
-            font-size: 20px;
-            cursor: pointer;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>FA-Tshirt</title>
+  <link href="https://fonts.googleapis.com/css2?family=Snap+ITC&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: url('https://images.unsplash.com/photo-1603808033192-082d6919d7c1?auto=format&fit=crop&w=1350&q=80') no-repeat center center fixed;
+      background-size: cover;
+      color: #fff;
+    }
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 10px 20px;
+      background-color: rgba(0, 0, 0, 0.7);
+    }
+    .logo {
+      font-family: 'Snap ITC', cursive;
+      font-size: 32px;
+      font-weight: bold;
+      text-shadow: 2px 2px 4px #ff0000;
+    }
+    .search-bar {
+      padding: 4px 8px;
+      font-size: 14px;
+      width: 250px;
+    }
+    .categories {
+      display: flex;
+      justify-content: center;
+      gap: 30px;
+      margin-top: 10px;
+    }
+    .category {
+      cursor: pointer;
+      padding: 10px 20px;
+      background: rgba(255, 255, 255, 0.2);
+      border-radius: 8px;
+    }
+    .popup {
+      display: none;
+      position: absolute;
+      top: 120px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 60%;
+      height: 50vh;
+      background: rgba(0, 0, 0, 0.8);
+      color: #fff;
+      padding: 20px;
+      font-size: 12px;
+      border-radius: 10px;
+      z-index: 1000;
+    }
+    footer {
+      background-color: rgba(0, 0, 0, 0.85);
+      color: #fff;
+      padding: 30px;
+      font-size: 14px;
+      text-align: center;
+      margin-top: 100px;
+    }
+  </style>
 </head>
-
 <body>
-    <header>
-        <div class="logo">
-            <img src="https://i.imgur.com/FAkX0sJ.png" alt="FA-Tshirt Logo">
-            <span>FA-Tshirt</span>
-        </div>
-        <div class="search-bar">
-            <input type="text" placeholder="Search for products...">
-        </div>
-        <div class="nav-icons">
-            <button>Login</button>
-            <button>Cart</button>
-        </div>
-    </header>
-
-    <div class="category-bar">
-        <div onclick="togglePopup('mensPopup')">Men's</div>
-        <div onclick="togglePopup('womensPopup')">Women's</div>
-        <div onclick="togglePopup('kidsPopup')">Kid's</div>
+  <header>
+    <div class="logo">FA-Tshirt</div>
+    <input type="text" class="search-bar" placeholder="Search here..." />
+    <div>
+      <button>Login</button>
+      <button>Cart</button>
     </div>
+  </header>
 
-    <!-- Popups -->
-    <div id="mensPopup" class="popup">
-        <button class="popup-close" onclick="togglePopup('mensPopup')">&times;</button>
-        <h3>Men's Categories</h3>
-        <ul>
-            <li>Casual T-Shirts</li>
-            <li>Oversized Tees</li>
-            <li>Graphic Prints</li>
-            <li>Formal Shirts</li>
-            <li>New Arrivals</li>
-        </ul>
-    </div>
+  <div class="categories">
+    <div class="category" onclick="togglePopup('menPopup')">Men's</div>
+    <div class="category" onclick="togglePopup('womenPopup')">Women's</div>
+    <div class="category" onclick="togglePopup('kidsPopup')">Kid's</div>
+  </div>
 
-    <div id="womensPopup" class="popup">
-        <button class="popup-close" onclick="togglePopup('womensPopup')">&times;</button>
-        <h3>Women's Categories</h3>
-        <ul>
-            <li>Cropped Tees</li>
-            <li>Printed Tops</li>
-            <li>Oversized Fits</li>
-            <li>Stylish Basics</li>
-            <li>Best Sellers</li>
-        </ul>
-    </div>
+  <div id="menPopup" class="popup">
+    Explore latest Men's T-shirts in trendsetting styles!
+  </div>
+  <div id="womenPopup" class="popup">
+    Discover fashionable Women's collection crafted for comfort.
+  </div>
+  <div id="kidsPopup" class="popup">
+    Funky & cool Kid's wear for little champs!
+  </div>
 
-    <div id="kidsPopup" class="popup">
-        <button class="popup-close" onclick="togglePopup('kidsPopup')">&times;</button>
-        <h3>Kid's Categories</h3>
-        <ul>
-            <li>Cartoon Tees</li>
-            <li>Superhero Prints</li>
-            <li>Combo Offers</li>
-            <li>Seasonal Picks</li>
-            <li>All-Time Favorites</li>
-        </ul>
-    </div>
+  <footer>
+    <p><strong>About FA-Tshirt</strong><br>
+    FA-Tshirt is a dream turned into a startup. Started with a passion for fashion, design and creating a brand affordable for everyone — from low-income families to trend-savvy youth. The vision began when I saw that quality clothing is often overpriced, so I decided to change the game. With just ₹50,000 and huge determination, I began this journey. From watching YouTube tutorials to designing T-shirts better than big brands like Bewakoof.com, it’s all self-learned. I also manage trading on the side, and I’m deeply passionate about learning, MIS work, and growing my business through e-commerce.
+    <br><br>
+    The mission is simple: FA-Tshirt will be India’s No.1 clothing brand in quality, price, and swag. From New Ashok Nagar, Delhi — this brand was born not in a factory, but in a dream.
+    <br><br>
+    Snap it. Wear it. Flaunt it. 💥</p>
+  </footer>
 
-    <script>
-        function togglePopup(id) {
-            const popup = document.getElementById(id);
-            popup.style.display = popup.style.display === 'block' ? 'none' : 'block';
-        }
-    </script>
+  <script>
+    function togglePopup(id) {
+      const popups = document.querySelectorAll('.popup');
+      popups.forEach(popup => popup.style.display = 'none');
+      document.getElementById(id).style.display = 'block';
+    }
+  </script>
 </body>
-
 </html>
